err.log
warning: unused imports: `IntoResponse` and `Response`
 --> C:\Users\justl\source\repos\oxDataObject\ox_webservice_api\src\lib.rs:4:22
  |
4 | use axum::response::{IntoResponse, Response};
  |                      ^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::future::Future`
 --> C:\Users\justl\source\repos\oxDataObject\ox_webservice_api\src\lib.rs:5:5
  |
5 | use std::future::Future;
  |     ^^^^^^^^^^^^^^^^^^^

warning: `ox_webservice_api` (lib) generated 2 warnings (run `cargo fix --lib -p ox_webservice_api` to apply 2 suggestions)
   Compiling ox_webservice v0.1.0 (C:\Users\justl\source\repos\oxDataObject\ox_webservice)
warning: unused import: `Json`
 --> src\main.rs:1:26
  |
1 | use axum::{routing::get, Json, Router, response::{IntoResponse, Html}};
  |                          ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::collections::HashMap`
 --> src\main.rs:5:5
  |
5 | use std::collections::HashMap; // Keep this for now, might be needed later
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `OpenOptions`
 --> src\main.rs:7:21
  |
7 | use std::fs::{File, OpenOptions};
  |                     ^^^^^^^^^^^

warning: unused import: `Write`
 --> src\main.rs:8:21
  |
8 | use std::io::{Read, Write};
  |                     ^^^^^

warning: unused import: `std::ops::Deref`
  --> src\main.rs:12:5
   |
12 | use std::ops::Deref;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `tera::Tera`
  --> src\main.rs:16:5
   |
16 | use tera::Tera;
   |     ^^^^^^^^^^

warning: unused import: `std::panic`
  --> src\main.rs:23:5
   |
23 | use std::panic;
   |     ^^^^^^^^^^

warning: unused import: `CErrorHandler`
  --> src\main.rs:25:104
   |
25 | use ox_webservice_api::{ModuleEndpoints, ModuleEndpoint, WebServiceContext, SendableWebServiceHandler, CErrorHandler, ErrorHandlerFactory...
   |                                                                                                        ^^^^^^^^^^^^^

error[E0609]: no field `handle_error_fn` on type `&parking_lot::lock_api::Mutex<parking_lot::RawMutex, CErrorHandler>`
   --> src\main.rs:465:42
    |
465 | ...                   (handler.handle_error_fn)(
    |                                ^^^^^^^^^^^^^^^ unknown field

error[E0609]: no field `instance_ptr` on type `&parking_lot::lock_api::Mutex<parking_lot::RawMutex, CErrorHandler>`
   --> src\main.rs:466:45
    |
466 | ...                   handler.instance_ptr,
    |                               ^^^^^^^^^^^^ unknown field

For more information about this error, error: process didn't exit successfully: `target\debug\ox_webservice.exe --config C:\Users\justl\source\repos\oxDataObject\ox_webservice.yaml` (exit code: 1)
) due to 2 previous errors; 8 warnings emitted
